# ros_ovr_sdk

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
sdk/: .gitignore
sdk/ovr_sdk_linux_0.5.0.1/Firmware/DK2/: DK2Firmware_2_12.ovrf  readme.txt
